--- a/arrayTest.html
+++ b/arrayTest.html
@@ -19,7 +19,17 @@
     forEach1(function (value, index, myarr) {
         console.log(value, index, myarr);
     });
-
+//第二个函数
+    function map1(fn) {
+        for (var i = 0; i < array.length; i++) {
+            var value = array[i];
+            array[i] = fn(value);
+        }
+        console.log(array);
+    }
+    map1(function (value) {
+        return value * value;
+    })
 </script>
 </body>
 </html>
